--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -45,4 +45,6 @@ h5 { //* INCLUIDO SOLO EN UBICACIÓN *//
 	float: left;
 	padding-top: 20px;
 	text-align: center;
+	margin-left: 2vh;
+	margin-right: 2vh;
 }
