--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -13,6 +13,8 @@
 @import "nosotros";
 @import "ubicacion";
 @import "contacto";
+@import "term";
+@import "politic";
 
 //* RESTO DEL SCSS *//
 @keyframes gradient {
@@ -33,6 +35,7 @@
 	padding: 0px;
 }
 
+//* MIXIN *//
 @mixin bordes {
     border-style: double;
 	border-color: $color-tres;
@@ -42,7 +45,10 @@
 	background-size: cover;
 	background-repeat: no-repeat;
 }
-
+@mixin hoverlinks {
+	background-color: $color-cuatro;
+	border-radius: 2px;
+}
 body {
     @include background;
 	background-image: url(foto.jpg);
@@ -61,12 +67,10 @@ body {
 		.menu {
 		margin: 5px;
 		a:hover {
-			background-size: 45%;
-			background-color: $color-cuatro;
-			border-radius: 2px;
+				@include hoverlinks;
+			}
 		}
 	}
-}
 	h1 {
 		color: $color-blanco;
 		padding-bottom: 45px;
@@ -174,7 +178,7 @@ body {
 		max-width: 70%;
 		}
 	.textoubi1 {
-		padding-bottom: 30px;
+		padding-bottom: 45px;
 		padding-top: 30px;
 		padding-right: 35px;
 		text-align: right;
@@ -191,10 +195,9 @@ body {
 			transform: scale(1.3);
 		}
 	}
-}
 	#iframe {
 		height: 50vh;
-		width: 85vh;
+		width: 65vh;
 		position: relative;
 		float: right;
 		margin-left: 50vh;
@@ -208,9 +211,11 @@ body {
 		height: 100%;
 		margin-top: 80px;
 		margin-bottom: 65px;
-		padding-bottom: 110px;
+		padding-bottom: 90px;
 		text-align: start;
 		font-size: 3vh;
+		margin-left: 30vh;
+		margin-right: 30vh;
 	}
 	.contacto1__contact {
 		display: grid;
@@ -241,14 +246,18 @@ body {
 	}
 	.contacto1__form {
 		grid-template-columns: auto;
-		padding-left: 120vh;
+		padding-left: 90vh;
 		position: absolute;
 		text-align: center;
 	}
+}
 //* VISTA MOBIL *//
 @media only screen and (max-width: ($ancho - 200)) {
 	.ocultar_div {
 		display: none;
+	#iframe {
+		width: 5vh;
+		margin-top: 30vh;
+		}
 	}
 }
-	
