--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -59,8 +59,8 @@ input {
 }
 #botonenviar {
 	background-color: $color-tres;
-	border-style: dotted;
-	border-color: $color-tres;
+	border-style: solid;
+	border-color: $color-cuatro;
 	height: 5vh;
 	width: 15vh;
 	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
