--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -5,7 +5,7 @@
 	border-color: $color-tres;
 }
 hr {
-	color: $color-cuatro;
+	color: $color-cuatro !important;
 }
 h1 { //* INCLUIDO EN TODOS LOS HTML *//
 	color: #ffffff;
