--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -53,6 +53,9 @@ body {
     @include background;
 	background-image: url(foto.jpg);
 }
+a {
+	color: white !important;
+}
 
 //* MEDIA QUERIES *// VISTA DESKTOP
 @media only screen and (min-width: $ancho) {
@@ -162,7 +165,64 @@ body {
 		margin-left: 35vh;
 		margin-right: 35vh;
 		text-align: center;
-		height: 20vh;
+		height: 25vh;
+	}
+	.nosotros2 {
+		display: flex;
+		flex: wrap;
+		justify-content: center;
+		margin-left: 35vh;
+		margin-right: 35vh;
+		height: 25vh;
+	}
+	.caja {
+		width: 250px;
+		height: 250px;
+		margin: 10px;
+		padding: 20px;
+		border: 2px solid $color-cuatro;
+		border-radius: 14px;
+		text-align: center;
+		position: relative;
+	}
+	.caja img{
+		margin-top: 50px;
+		transition: all 400ms;
+	}
+
+	.caja h4{
+		margin-top: 10px;
+		transition: all 500ms;
+	}
+	.caja .container_parrafo{
+		width: 100%;
+		height: 150px;
+		position: absolute;
+		left: 0;
+		bottom: 0;
+		border-radius: 0px 0px 14px 14px;
+		overflow: hidden;
+		
+	}
+	.caja p{
+		font-size: 15px;
+		opacity: 0;
+		transform: translateY(150px);
+		transition: all 600ms;
+	}
+	//* HOVER *//
+	.caja:hover {
+		background: $color-dos;
+	}
+	.caja:hover img {
+		transform: translateY(-57px);
+	}
+	.caja:hover h4 {
+		transform: translateY(-57px);
+	}
+	.caja:hover .container_parrafo p {
+		transform: translateY(0px);
+		opacity: 1;
 	}
 	.fondo_ubi{ 
         @include bordes;
@@ -250,6 +310,14 @@ body {
 		position: absolute;
 		text-align: center;
 	}
+	.terms {
+		max-height: 100%;
+        padding-bottom: 100px;
+		margin-left: 30vh;
+		margin-right: 30vh;
+		height: 75vh;
+    }
+	
 }
 //* VISTA MOBIL *//
 @media only screen and (max-width: ($ancho - 200)) {
