--- a/scss/_term.scss
+++ b/scss/_term.scss
@@ -5,5 +5,9 @@
 	background-color: $color-uno;
 	margin: 5px;
 	margin-top: 80px;
-	max-height: 135vh;
+	max-height: 285vh;
+}
+.leermas {
+	text-align: center;
+	padding-bottom: 10px;
 }
