--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -54,3 +54,65 @@
 	height: 90%;
 }
 
+@mixin center($extend: true) {
+	position: absolute;
+	left: 50%;
+	margin-top: 10vh;
+	transform: translateX(-50%) translateY(-50%);
+}
+
+button {
+	@include center;
+	background: $color-uno;
+	color: $color-blanco;
+	width: 200px;
+	height: 60px;
+	border: 0;
+	font-size: 18px;
+	border-radius: 4px;
+	font-family: 'Raleway', sans-serif;
+	transition: .6s;
+	overflow: hidden;
+	position: relative;
+
+	a {
+		text-decoration: none !important;
+		&:focus {
+			outline: 0;
+		}
+	}
+	&:before {
+		content: '';
+		display: block;
+		position: absolute;
+		background: $color-dos;
+		width: 60px;
+		height: 100%;
+		left: 0;
+		top: 0;
+		opacity: .5;
+		filter: blur(30px);
+		transform: translateX(-100px) skewX(-15deg);
+	}
+	&:after {
+		content: '';
+		display: block;
+		position: absolute;
+		background: $color-dos;
+		width: 30px;
+		height: 100%;
+		left: 30px;
+		top: 0;
+		opacity: 0;
+		filter: blur(5px);
+		transform: translateX(-100px) skewX(-15deg);
+	}
+}
+
+.fondo_botones {
+	@include bordes;
+	display: grid;
+	background: radial-gradient($color-dos, $color-uno);
+	margin: 5px;
+	max-height: 103vh;
+}
