--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -2,23 +2,49 @@
 
 @mixin bordes {
     border-style: double;
-	border-color: $color-tres;
+    border-color: $color-tres;
 }
-
 .nosotros1 {
     @include bordes;
     background-color: $color-uno;
-    margin-top: 80px;
-    padding-bottom: 150px;
+    margin-top: 50px;
     max-height: 300vh;
-    height: 135vh;
+    height: auto;
+    padding-bottom: 10px;
+    .nosotros1_parrafo {
+        padding: 5px 5px;
+        text-align: center;
+        height: auto;
+    }
 }
 
 .nosotros2 {
     @include bordes;
     background-color: $color-uno;
     margin-top: 80px;
-    padding-bottom: 150px;
+    padding-bottom: 10px;
     max-height: 300vh;
-    height: 135vh;
+    display: grid;
+    justify-content: center;
+    .caja {
+        width: 250px;
+        height: 250px;
+        margin: 10px;
+        padding: 5px;
+        border: 2px solid $color-cuatro;
+        border-radius: 14px;
+        text-align: center;
+        position: relative;
+        .caja .container_parrafo {
+            width: 100%;
+            height: 150px;
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            border-radius: 0px 0px 14px 14px;
+            .caja p {
+                font-size: 15px;
+            }
+        }
+    }
 }
