--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,13 +1,16 @@
 //* SIN MEDIA QUERIES *//
 
 @mixin bordes {
-    border-style: double;
+	border-style: double;
 	border-color: $color-tres;
 }
+
 hr {
 	color: $color-cuatro !important;
 }
-h1 { //* INCLUIDO EN TODOS LOS HTML *//
+
+h1 {
+	//* INCLUIDO EN TODOS LOS HTML *//
 	color: #ffffff;
 	padding-bottom: 45px;
 	padding-top: 50px;
@@ -20,7 +23,9 @@ h1 { //* INCLUIDO EN TODOS LOS HTML *//
 	opacity: .70;
 	line-height: 38px;
 }
-h2 { //* INCLUIDO SOLO EN INDEX *//
+
+h2 {
+	//* INCLUIDO SOLO EN INDEX *//
 	color: #ffffff;
 	padding-bottom: 50px;
 	padding-top: 50px;
@@ -28,7 +33,9 @@ h2 { //* INCLUIDO SOLO EN INDEX *//
 	-webkit-text-stroke: 1px $color-tres;
 	text-align: center;
 }
-h3 { //* INCLUIDO EN SERVICIOS Y NOSOTROS *//
+
+h3 {
+	//* INCLUIDO EN SERVICIOS Y NOSOTROS *//
 	color: $color-blanco;
 	display: grid;
 	padding-bottom: 40px;
@@ -37,7 +44,9 @@ h3 { //* INCLUIDO EN SERVICIOS Y NOSOTROS *//
 	font-size: 25px;
 	text-align: center;
 }
-h5 { //* INCLUIDO SOLO EN UBICACIÓN *//
+
+h5 {
+	//* INCLUIDO SOLO EN UBICACIÓN *//
 	padding-bottom: 15px;
 	color: $color-blanco;
 	-webkit-text-stroke: 1px $color-tres;
