--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -221,6 +221,37 @@ button {
   margin: 5px;
   max-height: 103vh; }
 
+#section-carrito {
+  font-family: oswald, sans-serif;
+  width: 30%;
+  height: 30%;
+  margin: 30px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  background-color: #2c50ee;
+  border-radius: 10px;
+  position: sticky;
+  top: 10px;
+  color: white; }
+
+#section-carrito div {
+  display: flex;
+  justify-content: center;
+  margin: 10px; }
+
+#container-general {
+  display: flex;
+  flex-direction: row; }
+
+#section-paquetes {
+  width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-end; }
+
 .servicios1 {
   border-style: double;
   border-color: #007ea7;
@@ -516,6 +547,69 @@ input {
     float: right; }
   .containerbarraup .barraup {
     color: none; }
+
+#container-general {
+  display: flex;
+  flex-direction: row; }
+
+#section-paquetes {
+  width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-end; }
+
+.card-paquete {
+  width: 40%;
+  margin: 20px;
+  text-align: center; }
+
+.font {
+  font-size: 18px;
+  font-family: oswald, sans-serif; }
+
+.img-container {
+  overflow: hidden;
+  position: relative; }
+
+.img-container img {
+  width: 90%;
+  height: 50%;
+  margin: 10px; }
+
+.boton {
+  font-size: 15px;
+  font-family: oswald, sans-serif;
+  width: 50%;
+  margin-top: 10px;
+  text-align: center;
+  align-self: center;
+  color: #ffffff;
+  background-color: #00a8e8; }
+
+.info-paquete {
+  display: flex;
+  flex-direction: column; }
+
+#section-carrito {
+  font-family: oswald, sans-serif;
+  width: 30%;
+  height: 30%;
+  margin: 30px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  background-color: #00171f;
+  border-radius: 10px;
+  position: sticky;
+  top: 10px;
+  color: #ffffff; }
+
+#section-carrito div {
+  display: flex;
+  justify-content: center;
+  margin: 10px; }
 
 @keyframes gradient {
   0% {
