--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -116,3 +116,38 @@ button {
 	margin: 5px;
 	max-height: 103vh;
 }
+/////////////////////////////////
+#section-carrito {
+    font-family: oswald, sans-serif;
+    width: 30%;
+    height: 30%;
+    margin: 30px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    background-color: #2c50ee;
+    border-radius: 10px;
+    position: sticky;
+    top: 10px;
+    color: white;
+}
+
+#section-carrito div {
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+}
+
+#container-general {
+    display: flex;
+    flex-direction: row;
+}
+
+#section-paquetes {
+    width: 80%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: flex-end;
+}
