--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -20,3 +20,76 @@
     color: none;
 }
 }
+
+#container-general {
+    display: flex;
+    flex-direction: row;
+}
+
+#section-paquetes {
+    width: 80%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: flex-end;
+}
+
+.card-paquete {
+    width: 40%;
+    margin: 20px;
+    text-align: center;
+}
+
+.font {
+    font-size: 18px;
+    font-family: oswald, sans-serif;
+}
+
+.img-container {
+    overflow: hidden;
+    position: relative;
+}
+
+.img-container img {
+    width: 90%;
+    height: 50%;
+    margin: 10px;
+}
+
+.boton {
+    font-size: 15px;
+    font-family: oswald, sans-serif;
+    width: 50%;
+    margin-top: 10px;
+    text-align: center;
+    align-self: center;
+    color: $color-blanco;
+    background-color: $color-cuatro;
+}
+
+.info-paquete {
+    display: flex;
+    flex-direction: column;
+}
+
+#section-carrito {
+    font-family: oswald, sans-serif;
+    width: 30%;
+    height: 30%;
+    margin: 30px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    background-color: $color-uno;
+    border-radius: 10px;
+    position: sticky;
+    top: 10px;
+    color: $color-blanco
+}
+
+#section-carrito div {
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+}
