--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -168,7 +168,7 @@ h5 {
   padding: 10px;
   height: 90%; }
 
-button {
+.botton {
   position: absolute;
   left: 50%;
   margin-top: 10vh;
@@ -184,11 +184,11 @@ button {
   transition: .6s;
   overflow: hidden;
   position: relative; }
-  button a {
+  .botton a {
     text-decoration: none !important; }
-    button a:focus {
+    .botton a:focus {
       outline: 0; }
-  button:before {
+  .botton:before {
     content: '';
     display: block;
     position: absolute;
@@ -200,7 +200,7 @@ button {
     opacity: .5;
     filter: blur(30px);
     transform: translateX(-100px) skewX(-15deg); }
-  button:after {
+  .botton:after {
     content: '';
     display: block;
     position: absolute;
@@ -251,6 +251,19 @@ button {
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: flex-end; }
+
+button {
+  background: #00171f;
+  color: #ffffff;
+  width: 200px;
+  height: 60px;
+  border: 0;
+  font-size: 18px;
+  border-radius: 4px;
+  font-family: 'Raleway', sans-serif;
+  transition: .6s;
+  overflow: hidden;
+  position: relative; }
 
 .servicios1 {
   border-style: double;
@@ -586,6 +599,41 @@ input {
   align-self: center;
   color: #ffffff;
   background-color: #00a8e8; }
+  .boton:before {
+    content: '';
+    display: block;
+    position: absolute;
+    background: #003459;
+    width: 60px;
+    height: 100%;
+    left: 0;
+    top: 0;
+    opacity: .5;
+    filter: blur(30px);
+    transform: translateX(-100px) skewX(-15deg); }
+  .boton:after {
+    content: '';
+    display: block;
+    position: absolute;
+    background: #003459;
+    width: 30px;
+    height: 100%;
+    left: 30px;
+    top: 0;
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateX(-100px) skewX(-15deg); }
+  .boton:hover {
+    background: #007ea7;
+    cursor: pointer; }
+    .boton:hover:before {
+      transform: translateX(300px) skewX(-15deg);
+      opacity: 0.6;
+      transition: .7s; }
+    .boton:hover:after {
+      transform: translateX(300px) skewX(-15deg);
+      opacity: 1;
+      transition: .7s; }
 
 .info-paquete {
   display: flex;
@@ -610,6 +658,215 @@ input {
   display: flex;
   justify-content: center;
   margin: 10px; }
+
+.button {
+  background: #00171f;
+  color: #ffffff;
+  width: 10px;
+  height: 10px;
+  border: 0;
+  font-size: 18px;
+  border-radius: 4px;
+  font-family: 'Raleway', sans-serif;
+  transition: .6s;
+  overflow: hidden;
+  position: relative; }
+  .button:hover {
+    background: #007ea7;
+    cursor: pointer; }
+    .button:hover:before {
+      transform: translateX(300px) skewX(-15deg);
+      opacity: 0.6;
+      transition: .7s; }
+    .button:hover:after {
+      transform: translateX(300px) skewX(-15deg);
+      opacity: 1;
+      transition: .7s; }
+
+.modal-carrito {
+  position: relative;
+  background-color: white;
+  min-width: 500px;
+  padding: 20px;
+  margin-top: -100%;
+  transition: all .5s; }
+
+.modal-active .modal-carrito {
+  margin-top: 0; }
+
+.modal-carrito h3 {
+  color: #1f4b95;
+  padding-bottom: 5px; }
+
+.modal-carrito #carritoCerrar {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  font-size: 20px;
+  color: #1f4b95;
+  border: none;
+  background-color: white; }
+
+.modal-carrito #carritoCerrar:hover {
+  cursor: pointer; }
+
+.modal-carrito #carritoCerrar:focus {
+  outline: none; }
+
+.modal-carrito .precioPaquete {
+  padding-top: 10px; }
+
+#boton-carrito {
+  border: none;
+  color: white;
+  font-size: 20px;
+  background-color: #ec641c;
+  transition: all .3s;
+  height: 100%; }
+
+#boton-carrito:hover {
+  cursor: pointer;
+  color: white;
+  background-color: #1f4b95; }
+
+#boton-carrito:focus {
+  outline: none; }
+
+.divcarrito {
+  float: right;
+  align-items: right;
+  justify-items: right;
+  margin-left: 80px; }
+
+#contenedor-paquetes {
+  max-width: 1200px;
+  margin: 60px auto;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap; }
+
+.paquete {
+  border: 1px solid white;
+  max-width: 20%;
+  padding: 10px;
+  margin: 10px;
+  margin-bottom: 20px;
+  border-radius: 15px;
+  box-shadow: 2px 6px 3px 3px rgba(0, 0, 0, 0.3); }
+
+.paquete:hover {
+  border: 2px solid #1f4b95;
+  transform: scale(1.1, 1.1);
+  transition: ease .8s;
+  box-shadow: 4px 4px #1f4b95; }
+
+.precioPaquete {
+  font-weight: 700; }
+
+.boton-agregar {
+  background-color: #ec641c;
+  color: white;
+  font-size: 18px;
+  font-weight: 700;
+  padding: 5px;
+  border: none; }
+
+.boton-comprar {
+  background-color: #008000;
+  color: white;
+  font-size: 18px;
+  font-weight: 700;
+  padding: 5px;
+  border: none; }
+
+.boton-agregar:hover {
+  cursor: pointer; }
+
+.boton-agregar:focus {
+  outline: none; }
+
+.boton-comprar:hover {
+  cursor: pointer; }
+
+.boton-comprar:focus {
+  outline: none; }
+
+.modal-contenedor {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.3);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all .5s;
+  opacity: 0;
+  visibility: hidden; }
+
+.modal-active {
+  opacity: 1;
+  visibility: visible; }
+
+.modal-carrito {
+  position: relative;
+  background-color: white;
+  min-width: 500px;
+  padding: 20px;
+  margin-top: -100%;
+  transition: all .5s; }
+
+.modal-active .modal-carrito {
+  margin-top: 0; }
+
+.modal-carrito h3 {
+  color: #1f4b95;
+  padding-bottom: 5px; }
+
+.modal-carrito #carritoCerrar {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  font-size: 20px;
+  color: #1f4b95;
+  border: none;
+  background-color: white; }
+
+.modal-carrito #carritoCerrar:hover {
+  cursor: pointer; }
+
+.modal-carrito #carritoCerrar:focus {
+  outline: none; }
+
+.modal-carrito .precioPaquete {
+  padding-top: 10px; }
+
+.paqueteEnCarrito {
+  border-left: 5px solid lightblue;
+  border-bottom-left-radius: 3px;
+  border-top-left-radius: 3px;
+  margin: 5px 0;
+  padding: 5px 10px;
+  display: flex;
+  justify-content: space-between; }
+
+.paqueteEnCarrito:hover {
+  border-left: 5px solid #1f4b95; }
+
+.boton-eliminar {
+  background-color: white;
+  color: red;
+  border: none;
+  font-size: 20px; }
+
+.boton-eliminar:hover {
+  cursor: pointer; }
+
+.boton-eliminar:focus {
+  outline: none; }
+
+#fotocarrito {
+  color: white; }
 
 @keyframes gradient {
   0% {
@@ -689,12 +946,12 @@ a {
     background: linear-gradient(to right, transparent, #00171f, #003459, #007ea7, #ffffff, transparent);
     margin-top: 3vh;
     margin-left: 5vh; }
-  button {
+  .botton {
     position: absolute;
     left: 50%;
     margin-top: 10vh;
     transform: translateX(-50%) translateY(-50%); }
-  button {
+  .botton {
     background: #00171f;
     color: #ffffff;
     width: 200px;
@@ -705,12 +962,13 @@ a {
     font-family: 'Raleway', sans-serif;
     transition: .6s;
     overflow: hidden;
-    position: relative; }
-    button a {
+    position: relative;
+    text-align: center; }
+    .botton a {
       text-decoration: none !important; }
-      button a:focus {
+      .botton a:focus {
         outline: 0; }
-    button:before {
+    .botton:before {
       content: '';
       display: block;
       position: absolute;
@@ -722,7 +980,7 @@ a {
       opacity: .5;
       filter: blur(30px);
       transform: translateX(-100px) skewX(-15deg); }
-    button:after {
+    .botton:after {
       content: '';
       display: block;
       position: absolute;
@@ -734,14 +992,14 @@ a {
       opacity: 0;
       filter: blur(5px);
       transform: translateX(-100px) skewX(-15deg); }
-    button:hover {
+    .botton:hover {
       background: #007ea7;
       cursor: pointer; }
-      button:hover:before {
+      .botton:hover:before {
         transform: translateX(300px) skewX(-15deg);
         opacity: 0.6;
         transition: .7s; }
-      button:hover:after {
+      .botton:hover:after {
         transform: translateX(300px) skewX(-15deg);
         opacity: 1;
         transition: .7s; }
