--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -65,6 +65,47 @@
     align-self: center;
     color: $color-blanco;
     background-color: $color-cuatro;
+    &:before {
+        content: '';
+        display: block;
+        position: absolute;
+        background: $color-dos;
+        width: 60px;
+        height: 100%;
+        left: 0;
+        top: 0;
+        opacity: .5;
+        filter: blur(30px);
+        transform: translateX(-100px) skewX(-15deg);
+    }
+    &:after {
+        content: '';
+        display: block;
+        position: absolute;
+        background: $color-dos;
+        width: 30px;
+        height: 100%;
+        left: 30px;
+        top: 0;
+        opacity: 0;
+        filter: blur(5px);
+        transform: translateX(-100px) skewX(-15deg);
+    }
+    &:hover {
+        background: $color-tres;
+        cursor: pointer;
+        &:before {
+            transform: translateX(300px) skewX(-15deg);
+            opacity: 0.6;
+            transition: .7s;
+        }
+        &:after {
+            transform: translateX(300px) skewX(-15deg);
+            opacity: 1;
+            transition: .7s;
+        }
+    }
+
 }
 
 .info-paquete {
@@ -93,3 +134,247 @@
     justify-content: center;
     margin: 10px;
 }
+
+.button {
+	background: $color-uno;
+	color: $color-blanco;
+	width: 10px;
+	height: 10px;
+	border: 0;
+	font-size: 18px;
+	border-radius: 4px;
+	font-family: 'Raleway', sans-serif;
+	transition: .6s;
+	overflow: hidden;
+	position: relative;
+    &:hover {
+        background: $color-tres;
+        cursor: pointer;
+        &:before {
+            transform: translateX(300px) skewX(-15deg);
+            opacity: 0.6;
+            transition: .7s;
+        }
+        &:after {
+            transform: translateX(300px) skewX(-15deg);
+            opacity: 1;
+            transition: .7s;
+        }
+    }
+}
+
+.modal-carrito {
+    position: relative;
+    background-color: white;
+    min-width: 500px;
+    padding: 20px;
+    margin-top: -100%;
+    transition: all .5s;
+  }
+  
+  .modal-active .modal-carrito {
+    margin-top: 0;
+  }
+  
+  .modal-carrito h3 {
+    color: #1f4b95;
+    padding-bottom: 5px;
+  }
+  .modal-carrito #carritoCerrar {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    font-size: 20px;
+    color: #1f4b95;
+    border: none;
+    background-color: white;
+  }
+  .modal-carrito #carritoCerrar:hover {
+    cursor: pointer;
+  }
+  .modal-carrito #carritoCerrar:focus {
+    outline: none;
+  }
+  .modal-carrito .precioPaquete {
+    padding-top: 10px;
+    
+  }
+
+  #boton-carrito {
+    border: none;
+    color: white;
+    font-size: 20px;
+    background-color: #ec641c;
+    transition: all .3s;
+    height: 100%;
+  }
+  
+  #boton-carrito:hover {
+    cursor: pointer;
+    color: white;
+    background-color: #1f4b95;
+  }
+  
+  #boton-carrito:focus {
+    outline: none;
+  }
+
+  .divcarrito {
+    float: right;
+    align-items: right;
+    justify-items: right;
+    margin-left: 80px;
+  }
+  
+  #contenedor-paquetes {
+    max-width: 1200px;
+    margin: 60px auto;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .paquete {
+    border: 1px solid white;
+    max-width: 20%;
+    padding: 10px;
+    margin: 10px;
+    margin-bottom: 20px;
+    border-radius: 15px;
+    box-shadow: 2px 6px 3px 3px rgba(0, 0, 0, 0.3);
+  }
+  
+  .paquete:hover {
+    border: 2px solid #1f4b95;
+    transform: scale(1.1, 1.1);
+    transition: ease .8s;
+    box-shadow: 4px 4px #1f4b95;
+  }
+  
+  .precioPaquete {
+    font-weight: 700;
+  }
+  
+  .boton-agregar {
+    background-color: #ec641c;
+    color: white;
+    font-size: 18px;
+    font-weight: 700;
+    padding: 5px;
+    border: none;
+  }
+  
+  .boton-comprar {
+    background-color: #008000;
+    color: white;
+    font-size: 18px;
+    font-weight: 700;
+    padding: 5px;
+    border: none;
+  }
+  
+  .boton-agregar:hover {
+    cursor: pointer;
+  }
+  
+  .boton-agregar:focus {
+    outline: none;
+  
+  }
+  
+  .boton-comprar:hover {
+    cursor: pointer;
+  }
+  
+  .boton-comprar:focus {
+    outline: none;
+  }
+  
+  .modal-contenedor {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.3);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all .5s;
+    opacity: 0;
+    visibility: hidden;
+  }
+  
+  .modal-active {
+    opacity: 1;
+    visibility: visible;
+  }
+  
+  .modal-carrito {
+    position: relative;
+    background-color: white;
+    min-width: 500px;
+    padding: 20px;
+    margin-top: -100%;
+    transition: all .5s;
+  }
+  
+  .modal-active .modal-carrito {
+    margin-top: 0;
+  }
+  
+  .modal-carrito h3 {
+    color: #1f4b95;
+    padding-bottom: 5px;
+  }
+  .modal-carrito #carritoCerrar {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    font-size: 20px;
+    color: #1f4b95;
+    border: none;
+    background-color: white;
+  }
+  .modal-carrito #carritoCerrar:hover {
+    cursor: pointer;
+  }
+  .modal-carrito #carritoCerrar:focus {
+    outline: none;
+  }
+  .modal-carrito .precioPaquete {
+    padding-top: 10px;
+    
+  }
+
+  .paqueteEnCarrito {
+    border-left: 5px solid lightblue;
+    border-bottom-left-radius: 3px;
+    border-top-left-radius: 3px;
+    margin: 5px 0;
+    padding: 5px 10px;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .paqueteEnCarrito:hover {
+    border-left: 5px solid #1f4b95;
+  }
+  
+  .boton-eliminar {
+    background-color: white;
+    color: red;
+    border: none;
+    font-size: 20px;
+  }
+  
+  .boton-eliminar:hover {
+    cursor: pointer;
+  }
+  .boton-eliminar:focus {
+    outline: none;
+  }
+
+  #fotocarrito {
+    color: white;
+  }
+
