--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -16,6 +16,7 @@ nav {
     margin: 5px; }
 
 footer {
+  color: white;
   display: grid;
   font-size: 10px;
   margin-top: 10vh; }
@@ -116,7 +117,7 @@ h3 {
 
 h5 {
   padding-bottom: 15px;
-  color: #ffffff;
+  color: white;
   -webkit-text-stroke: 1px #007ea7;
   font-size: 25px;
   float: left;
@@ -126,7 +127,7 @@ h5 {
   margin-right: 2vh; }
 
 p {
-  color: #2c2c2c;
+  color: white;
   font-family: "Noto Sans", sans-serif;
   line-height: 1.625;
   font-size: 14px;
@@ -708,11 +709,12 @@ input {
 .modal-carrito #carritoCerrar {
   position: absolute;
   top: 15px;
-  right: 15px;
+  margin-right: 15px;
   font-size: 20px;
   color: #1f4b95;
   border: none;
-  background-color: white; }
+  background-color: white;
+  width: 20px; }
 
 .modal-carrito #carritoCerrar:hover {
   cursor: pointer; }
@@ -727,7 +729,6 @@ input {
   border: none;
   color: white;
   font-size: 20px;
-  background-color: #ec641c;
   transition: all .3s;
   height: 100%; }
 
@@ -742,8 +743,7 @@ input {
 .divcarrito {
   float: right;
   align-items: right;
-  justify-items: right;
-  margin-left: 80px; }
+  justify-items: right; }
 
 #contenedor-paquetes {
   max-width: 1200px;
@@ -759,19 +759,20 @@ input {
   margin: 10px;
   margin-bottom: 20px;
   border-radius: 15px;
-  box-shadow: 2px 6px 3px 3px rgba(0, 0, 0, 0.3); }
+  box-shadow: 2px 6px 3px 3px rgba(0, 0, 0, 0.3);
+  background-color: #00a8e8; }
 
 .paquete:hover {
-  border: 2px solid #1f4b95;
+  border: 2px solid rgba(0, 0, 0, 0.384);
   transform: scale(1.1, 1.1);
   transition: ease .8s;
-  box-shadow: 4px 4px #1f4b95; }
+  box-shadow: 4px 4px rgba(0, 0, 0, 0.384); }
 
 .precioPaquete {
   font-weight: 700; }
 
 .boton-agregar {
-  background-color: #ec641c;
+  background-color: #00171f;
   color: white;
   font-size: 18px;
   font-weight: 700;
@@ -810,6 +811,8 @@ input {
   transition: all .5s;
   opacity: 0;
   visibility: hidden; }
+  .modal-contenedor p {
+    color: black; }
 
 .modal-active {
   opacity: 1;
@@ -835,7 +838,6 @@ input {
   top: 15px;
   right: 15px;
   font-size: 20px;
-  color: #1f4b95;
   border: none;
   background-color: white; }
 
@@ -884,7 +886,6 @@ input {
     background-position: 0% 50%; } }
 
 * {
-  color: #ffffff;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0px;
   padding: 0px; }
