--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -48,7 +48,7 @@ h3 {
 h5 {
 	//* INCLUIDO SOLO EN UBICACIÓN *//
 	padding-bottom: 15px;
-	color: $color-blanco;
+	color: white;
 	-webkit-text-stroke: 1px $color-tres;
 	font-size: 25px;
 	float: left;
@@ -59,8 +59,9 @@ h5 {
 }
 
 p {
-	color: #2c2c2c;
+	color: white;
 	font-family: "Noto Sans", sans-serif;
 	line-height: 1.625;
 	font-size: 14px;
 	margin-bottom: 0px; }
+
