--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -11,16 +11,19 @@
 	margin: 5px;
 	margin-top: 80px;
 	max-height: 95vh;
+	color: white;
 }
 
 .primertexto__parrafo {
 	text-align: center;
 	margin-left: 1vh;
 	margin-right: 1vh;
+	color: white;
 }
 
 .lista_index {
 	display: none;
+	color: white;
 }
 
 .fondo_foto1 {
