--- a/scss/_ubicacion.scss
+++ b/scss/_ubicacion.scss
@@ -24,9 +24,11 @@
 	padding-bottom: 20px;
 	margin-left: 2vh;
 	margin-right: 2vh;
+	color: white;
 }
 .textoubi2 {
 	padding-right: 50px;
 	line-height: 85px;
 	padding-left: 20px;
+	color: white;
 }
