--- a/scss/_productos.scss
+++ b/scss/_productos.scss
@@ -207,6 +207,8 @@
     font-size: 20px;
     transition: all .3s;
     height: 100%;
+    width: 50px;
+    background-color: $color-dos;
   }
   
   #boton-carrito:hover {
@@ -241,7 +243,7 @@
     margin-bottom: 20px;
     border-radius: 15px;
     box-shadow: 2px 6px 3px 3px rgba(0, 0, 0, 0.3);
-    background-color: $color-cuatro;
+    background-color: $color-dos;
   }
   
   .paquete:hover {
